--- a/views/hello.handlebars
+++ b/views/hello.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>HCI Project Portfolio</title>	
+	<title>HCI Project Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -15,15 +15,16 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->        
+    <![endif]-->
 </head>
 
 <body>
-	<div class="container">
-		<div class="jumbotron">
-			<h1>Hello, {{name}}!</h1>
-		</div>
-	</div>
+	<div class="project" id="{{id}}">
+	   <a href="project" class="thumbnail">
+	     <img src="images/{{image}}" class="img">
+	     <p>{{name}}</p>
+	   </a>
+	 </div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
